boreal/tests/assets/invalid_files/parsing/string_modifier_duplicated.yar
// [error: string modifier private appears multiple times]
rule a {
    strings:
        $a = "a" private wide private
}
